crates/gridlook-cdl/tests/snapshots/cdl_snapshots__tree_zarr.snap
---
source: crates/gridlook-cdl/tests/cdl_snapshots.rs
expression: "header(\"tree.zarr\")"
---
netcdf tree {
dimensions:
	time = 4 ;
	x = 3 ;
	y = 2 ;
variables:
	float salinity(time, x, y) ;
		salinity:_FillValue = NaN ;
		salinity:long_name = "Sea Water Salinity" ;
		salinity:units = "psu" ;
	float temperature(time, x, y) ;
		temperature:_FillValue = NaN ;
		temperature:long_name = "Sea Water Temperature" ;
		temperature:units = "degC" ;
	int64 time(time) ;
		time:calendar = "proleptic_gregorian" ;
		time:units = "days since 2024-01-01 00:00:00" ;
	float x(x) ;
		x:_FillValue = NaN ;
		x:long_name = "Cross-shore distance" ;
		x:units = "km" ;

// global attributes:
		:conventions = "CF-1.8" ;
		:institution = "NERACOOS" ;
		:title = "gridlook simple fixture" ;

group: group_a {
  dimensions:
  	time = 4 ;
  	x = 3 ;
  	y = 2 ;
  variables:
  	float temperature(time, x, y) ;
  		temperature:_FillValue = NaN ;
  		temperature:long_name = "Sea Water Temperature" ;
  		temperature:units = "degC" ;

  // group attributes:
  		:conventions = "CF-1.8" ;
  		:institution = "NERACOOS" ;
  		:title = "gridlook simple fixture" ;

  group: nested {
    dimensions:
    	time = 4 ;
    	x = 3 ;
    	y = 2 ;
    variables:
    	float temperature(time, x, y) ;
    		temperature:_FillValue = NaN ;
    		temperature:long_name = "Sea Water Temperature" ;
    		temperature:units = "degC" ;

    // group attributes:
    		:conventions = "CF-1.8" ;
    		:institution = "NERACOOS" ;
    		:title = "gridlook simple fixture" ;
    } // group nested
  } // group group_a

group: group_b {
  dimensions:
  	time = 4 ;
  	x = 3 ;
  	y = 2 ;
  variables:
  	float salinity(time, x, y) ;
  		salinity:_FillValue = NaN ;
  		salinity:long_name = "Sea Water Salinity" ;
  		salinity:units = "psu" ;

  // group attributes:
  		:conventions = "CF-1.8" ;
  		:institution = "NERACOOS" ;
  		:title = "gridlook simple fixture" ;
  } // group group_b
}
