crates/gridlook-cdl/tests/snapshots/cdl_snapshots__tree_zarr_specials.snap
---
source: crates/gridlook-cdl/tests/cdl_snapshots.rs
expression: "header_with_specials(\"tree.zarr\")"
---
netcdf tree {
dimensions:
	time = 4 ;
	x = 3 ;
	y = 2 ;
variables:
	float salinity(time, x, y) ;
		salinity:_FillValue = NaN ;
		salinity:long_name = "Sea Water Salinity" ;
		salinity:units = "psu" ;
		salinity:_Storage = "chunked" ;
		salinity:_ChunkSizes = 4, 3, 2 ;
		salinity:_Codecs = "[{\"name\":\"bytes\",\"configuration\":{\"endian\":\"little\"}},{\"name\":\"zstd\",\"configuration\":{\"level\":0,\"checksum\":false}}]" ;
		salinity:_Endianness = "little" ;
		salinity:_ChunkKeyEncoding = "default/" ;
	float temperature(time, x, y) ;
		temperature:_FillValue = NaN ;
		temperature:long_name = "Sea Water Temperature" ;
		temperature:units = "degC" ;
		temperature:_Storage = "chunked" ;
		temperature:_ChunkSizes = 4, 3, 2 ;
		temperature:_Codecs = "[{\"name\":\"bytes\",\"configuration\":{\"endian\":\"little\"}},{\"name\":\"zstd\",\"configuration\":{\"level\":0,\"checksum\":false}}]" ;
		temperature:_Endianness = "little" ;
		temperature:_ChunkKeyEncoding = "default/" ;
	int64 time(time) ;
		time:calendar = "proleptic_gregorian" ;
		time:units = "days since 2024-01-01 00:00:00" ;
		time:_Storage = "chunked" ;
		time:_ChunkSizes = 4 ;
		time:_Codecs = "[{\"name\":\"bytes\",\"configuration\":{\"endian\":\"little\"}},{\"name\":\"zstd\",\"configuration\":{\"level\":0,\"checksum\":false}}]" ;
		time:_Endianness = "little" ;
		time:_FillValue = 0 ;
		time:_ChunkKeyEncoding = "default/" ;
	float x(x) ;
		x:_FillValue = NaN ;
		x:long_name = "Cross-shore distance" ;
		x:units = "km" ;
		x:_Storage = "chunked" ;
		x:_ChunkSizes = 3 ;
		x:_Codecs = "[{\"name\":\"bytes\",\"configuration\":{\"endian\":\"little\"}},{\"name\":\"zstd\",\"configuration\":{\"level\":0,\"checksum\":false}}]" ;
		x:_Endianness = "little" ;
		x:_ChunkKeyEncoding = "default/" ;

// global attributes:
		:conventions = "CF-1.8" ;
		:institution = "NERACOOS" ;
		:title = "gridlook simple fixture" ;
		:_Format = "Zarr v3" ;

group: group_a {
  dimensions:
  	time = 4 ;
  	x = 3 ;
  	y = 2 ;
  variables:
  	float temperature(time, x, y) ;
  		temperature:_FillValue = NaN ;
  		temperature:long_name = "Sea Water Temperature" ;
  		temperature:units = "degC" ;
  		temperature:_Storage = "chunked" ;
  		temperature:_ChunkSizes = 4, 3, 2 ;
  		temperature:_Codecs = "[{\"name\":\"bytes\",\"configuration\":{\"endian\":\"little\"}},{\"name\":\"zstd\",\"configuration\":{\"level\":0,\"checksum\":false}}]" ;
  		temperature:_Endianness = "little" ;
  		temperature:_ChunkKeyEncoding = "default/" ;

  // group attributes:
  		:conventions = "CF-1.8" ;
  		:institution = "NERACOOS" ;
  		:title = "gridlook simple fixture" ;

  group: nested {
    dimensions:
    	time = 4 ;
    	x = 3 ;
    	y = 2 ;
    variables:
    	float temperature(time, x, y) ;
    		temperature:_FillValue = NaN ;
    		temperature:long_name = "Sea Water Temperature" ;
    		temperature:units = "degC" ;
    		temperature:_Storage = "chunked" ;
    		temperature:_ChunkSizes = 4, 3, 2 ;
    		temperature:_Codecs = "[{\"name\":\"bytes\",\"configuration\":{\"endian\":\"little\"}},{\"name\":\"zstd\",\"configuration\":{\"level\":0,\"checksum\":false}}]" ;
    		temperature:_Endianness = "little" ;
    		temperature:_ChunkKeyEncoding = "default/" ;

    // group attributes:
    		:conventions = "CF-1.8" ;
    		:institution = "NERACOOS" ;
    		:title = "gridlook simple fixture" ;
    } // group nested
  } // group group_a

group: group_b {
  dimensions:
  	time = 4 ;
  	x = 3 ;
  	y = 2 ;
  variables:
  	float salinity(time, x, y) ;
  		salinity:_FillValue = NaN ;
  		salinity:long_name = "Sea Water Salinity" ;
  		salinity:units = "psu" ;
  		salinity:_Storage = "chunked" ;
  		salinity:_ChunkSizes = 4, 3, 2 ;
  		salinity:_Codecs = "[{\"name\":\"bytes\",\"configuration\":{\"endian\":\"little\"}},{\"name\":\"zstd\",\"configuration\":{\"level\":0,\"checksum\":false}}]" ;
  		salinity:_Endianness = "little" ;
  		salinity:_ChunkKeyEncoding = "default/" ;

  // group attributes:
  		:conventions = "CF-1.8" ;
  		:institution = "NERACOOS" ;
  		:title = "gridlook simple fixture" ;
  } // group group_b
}
